--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
         <head>
-            <title>Test</title>
+            <title>学习</title>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -18,11 +18,11 @@
                 </div> -->
                 <div class="row flex-row">
                     <div class="col-sm-3">
-                        <img class="my-logo" src="https://avatars1.githubusercontent.com/u/37890402?s=460&v=4">
+                        <img class="my-logo" src="https://avatars3.githubusercontent.com/u/59493573?s=460&v=4">
                         <span class="my-describe">
                         <a class="my-author">LazyCat</a>
                         <br>
-                        Test
+                        学习
                         </span>
                     </div>
                     <div class="col-sm-9">
