--- a/model/content-model.html
+++ b/model/content-model.html
@@ -7,7 +7,7 @@
             <script src="{-{page.path}-}js/jquery-1.9.1.min.js" type="text/javascript"></script>
             <link type="text/css" href="{-{page.path}-}bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" />
             <script type="text/javascript" src="{-{page.path}-}bootstrap-3.3.7/js/bootstrap.min.js"></script>
-            <link type="text/css" href="{-{page.path}-}css/all.css" rel="stylesheet" />
+            <link type="text/css" href="{-{page.path}-}css/all.css?t={-{config.random}-}" rel="stylesheet" />
             <link rel="stylesheet" href="../highlight/styles/default.css">
             <script src="../highlight/highlight.pack.js"></script>
             <link rel="stylesheet" type="text/css" href="../highlight/styles/androidstudio.css"/>
