--- a/model/index-model.html
+++ b/model/index-model.html
@@ -8,7 +8,7 @@
             <script src="{-{config.path}-}js/jquery-1.9.1.min.js" type="text/javascript"></script>
             <link type="text/css" href="{-{config.path}-}bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" />
             <script type="text/javascript" src="{-{config.path}-}bootstrap-3.3.7/js/bootstrap.min.js"></script>
-            <link type="text/css" href="{-{config.path}-}css/all.css" rel="stylesheet" />
+            <link type="text/css" href="{-{config.path}-}css/all.css?t={-{config.random}-}" rel="stylesheet" />
             
         </head>
         <body>
