--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
             <link type="text/css" href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" />
             <script type="text/javascript" src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
-            <link type="text/css" href="css/all.css?t=458388250" rel="stylesheet" />
+            <link type="text/css" href="css/all.css?t=518055227" rel="stylesheet" />
             
         </head>
         <body>
@@ -156,6 +156,19 @@
             </div>
             <div class="index-list-item-subcontent">
                     #!/bin/bashNDK=/home/huwei/Android/android-ndk-r16b#NDK所在路径,注意替换为SYSROOT=$NDK/platforms/android-19/arch-arm/TOOLCHAIN=$NDK/toolchains/arm-linux-androideabi-4.9/prebuilt/linux-x86_64#交叉编译链,这里使用的是arm,如果需要编译其他平台的,更换即可functionbuild_one{./configure\--prefix=$PREFIX\--enable-shared\#生成动态库--disable-static\#禁止生成静态库--disable-doc\#关闭不需要的功能,下同--disable-ffplay\--disable-ffprobe\--disable-doc\--disable-symver\<a href="html/2019-04-16-02.html">阅读全文</a>
+            </div>
+        </div>
+</div><div  class="row">
+        <div class="col-md-8 col-md-offset-2  col-xs-12 list-page-item">
+            <div>
+                <span class="index-list-item-time">2019-09-28</span>
+                <span class="index-list-item-category">Java</span>
+            </div>
+            <div>
+                <span class="index-list-item-title"><a href="html/2019-09-28-01.html">阿里云Ubuntu问题</a></span>
+            </div>
+            <div class="index-list-item-subcontent">
+                    在阿里云防火墙添加白名单，出现ssh无法连接<a href="html/2019-09-28-01.html">阅读全文</a>
             </div>
         </div>
 </div>
