--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
             <link type="text/css" href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" />
             <script type="text/javascript" src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
-            <link type="text/css" href="css/all.css?t=518055227" rel="stylesheet" />
+            <link type="text/css" href="css/all.css?t=353199679" rel="stylesheet" />
             
         </head>
         <body>
@@ -169,6 +169,19 @@
             </div>
             <div class="index-list-item-subcontent">
                     在阿里云防火墙添加白名单，出现ssh无法连接<a href="html/2019-09-28-01.html">阅读全文</a>
+            </div>
+        </div>
+</div><div  class="row">
+        <div class="col-md-8 col-md-offset-2  col-xs-12 list-page-item">
+            <div>
+                <span class="index-list-item-time">2020-10-13</span>
+                <span class="index-list-item-category">android</span>
+            </div>
+            <div>
+                <span class="index-list-item-title"><a href="html/2020-10-13-01.html">AS的startService无法启动Service</a></span>
+            </div>
+            <div class="index-list-item-subcontent">
+                    今天遇到很奇怪的问题，startService无论如何都无法启动Service，检查AndroidManifest.xml没有问题，反复看了代码没有问题啊！最后clean下项目不行，rebuild也不行，重启AS不行，重启手机还是不行，突然想起就可以了<a href="html/2020-10-13-01.html">阅读全文</a>
             </div>
         </div>
 </div>
