--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
             <link type="text/css" href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" />
             <script type="text/javascript" src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
-            <link type="text/css" href="css/all.css?t=203841819" rel="stylesheet" />
+            <link type="text/css" href="css/all.css?t=516300934" rel="stylesheet" />
             
         </head>
         <body>
@@ -182,6 +182,32 @@
             </div>
             <div class="index-list-item-subcontent">
                     今天遇到很奇怪的问题，startService无论如何都无法启动Service，检查AndroidManifest.xml没有问题，反复看了代码没有问题啊！最后clean下项目不行，rebuild也不行，重启AS不行，重启手机还是不行，突然想起就可以了<a href="html/2020-10-13-01.html">阅读全文</a>
+            </div>
+        </div>
+</div><div  class="row">
+        <div class="col-md-8 col-md-offset-2  col-xs-12 list-page-item">
+            <div>
+                <span class="index-list-item-time">2020-10-22</span>
+                <span class="index-list-item-category">Linux</span>
+            </div>
+            <div>
+                <span class="index-list-item-title"><a href="html/2020-10-22-01.html">Ubuntu编译VLC代码</a></span>
+            </div>
+            <div class="index-list-item-subcontent">
+                    编译VLC3.1.7的android版本，出现脚本找不到，实际文件加载文件下面服务器下载vlc源码太慢。使用本机window7下载gitclone，出现了很多找不到的文件的提示接下来很多编译的文件需要使用dos2unixfind~/Project/vlc-all/vlc-android/-name"*.am"|xargsdos2unix<a href="html/2020-10-22-01.html">阅读全文</a>
+            </div>
+        </div>
+</div><div  class="row">
+        <div class="col-md-8 col-md-offset-2  col-xs-12 list-page-item">
+            <div>
+                <span class="index-list-item-time">2021-01-18</span>
+                <span class="index-list-item-category">Linux</span>
+            </div>
+            <div>
+                <span class="index-list-item-title"><a href="html/2021-01-18-01.html">交叉编译FFmpeg+x264+265(1)</a></span>
+            </div>
+            <div class="index-list-item-subcontent">
+                    FFmpeg的代码gitclonehttps://git.ffmpeg.org/ffmpeg.gitffmpegX264gitclonehttps://code.videolan.org/videolan/x264.gitX265gitclonehttps://github.com/videolan/x265.git1.安装X264不能简单的运行sudoapt-getinstallnasm,通过官方下载安装https://www.nasm.us/pub/nasm/releasebuilds/2.14.01/nasm-2.14.01.tar.gz，tarxvfnasm-2.13.03.tar.gz./configuremake-j4makeinstall2.安装X265cmakeCMakeLists.txtmake-j4makeinstall<a href="html/2021-01-18-01.html">阅读全文</a>
             </div>
         </div>
 </div>
