--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
             <link type="text/css" href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" />
             <script type="text/javascript" src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
-            <link type="text/css" href="css/all.css?t=516300934" rel="stylesheet" />
+            <link type="text/css" href="css/all.css?t=365043893" rel="stylesheet" />
             
         </head>
         <body>
@@ -207,7 +207,20 @@
                 <span class="index-list-item-title"><a href="html/2021-01-18-01.html">交叉编译FFmpeg+x264+265(1)</a></span>
             </div>
             <div class="index-list-item-subcontent">
-                    FFmpeg的代码gitclonehttps://git.ffmpeg.org/ffmpeg.gitffmpegX264gitclonehttps://code.videolan.org/videolan/x264.gitX265gitclonehttps://github.com/videolan/x265.git1.安装X264不能简单的运行sudoapt-getinstallnasm,通过官方下载安装https://www.nasm.us/pub/nasm/releasebuilds/2.14.01/nasm-2.14.01.tar.gz，tarxvfnasm-2.13.03.tar.gz./configuremake-j4makeinstall2.安装X265cmakeCMakeLists.txtmake-j4makeinstall<a href="html/2021-01-18-01.html">阅读全文</a>
+                    FFmpeg的代码gitclonehttps://git.ffmpeg.org/ffmpeg.gitffmpegX264gitclonehttps://code.videolan.org/videolan/x264.gitX265gitclonehttps://github.com/videolan/x265.git1.安装X264不能简单的运行sudoapt-getinstallnasm,通过官方下载安装https://www.nasm.us/pub/nasm/releasebuilds/2.14.01/nasm-2.14.01.tar.gz，tarxvfnasm-2.13.03.tar.gz./configuremake-j4makeinstall2.安装X265cmakeCMakeLists.txtmake-j4makeinstall3.下载AndroidNDKwgethttps:/<a href="html/2021-01-18-01.html">阅读全文</a>
+            </div>
+        </div>
+</div><div  class="row">
+        <div class="col-md-8 col-md-offset-2  col-xs-12 list-page-item">
+            <div>
+                <span class="index-list-item-time">2021-04-22</span>
+                <span class="index-list-item-category">Linux</span>
+            </div>
+            <div>
+                <span class="index-list-item-title"><a href="html/2021-04-22-01.html">MicroChat(1)</a></span>
+            </div>
+            <div class="index-list-item-subcontent">
+                    服务器安装Mysqlaptinstallmysql-server可能出现找不要源，添加阿里源添加阿里源cd/etc/apt/sudocpsources.listsources.list.baksudovimsources.list#添加阿里源debhttp://mirrors.aliyun.com/ubuntu/bionicmainrestricteduniversemultiversedebhttp://mirrors.aliyun.com/ubuntu/bionic-securitymainrestricteduniversemultiversedebhttp://mirrors.aliyun.com/ubuntu/bionic-updatesmainrestricteduniversemultiversedebhttp://mirrors.aliyun.com/ubuntu/bion<a href="html/2021-04-22-01.html">阅读全文</a>
             </div>
         </div>
 </div>
